--- a/app/src/main/res/layout/activity_kalyan_work.xml
+++ b/app/src/main/res/layout/activity_kalyan_work.xml
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:background="@color/noColor"
         android:gravity="center"
-        android:text="Updated every day at 12pm &amp; 7pm"
+        android:text="Updated every day at 9pm"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="15dp"
         android:textStyle="bold"
@@ -65,7 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="@layout/button_background"
-        android:text="Single Bet Game"
+        android:text="Single Kalyan Matka"
         android:textColor="@color/noColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -80,7 +80,7 @@
         android:layout_marginTop="12dp"
         android:background="@layout/button_background"
         android:bottomRightRadius="10dp"
-        android:text="Panel Bet Game"
+        android:text="Panel Kalyan Matka"
         android:textColor="@color/noColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -93,7 +93,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:background="@layout/button_background"
-        android:text="Jodi Bet Game"
+        android:text="Jodi Kalyan Matka"
         android:textColor="@color/noColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
